2014-02-04  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/grupos/configurar_grupo.php: Fixed bug.

	* operation/invoices/invoices.php: Added file
	attachment to invoices.

2014-02-04  Dario Rodriguez <dario@artica.es>

	* include/functions_api.php,
	include/api.php: Created a new function to create
	companies using the API.

2014-02-04  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_html.php: Added the function
	"get_last_date_control".

	* include/functions_form.php: Added the new date contol to
	the incident search form in the function
	"form_search_incident".

	* include/functions_incidents.php: Modified the function
	"filter_incidents" to add the new date filter.

	* include/functions_db.php: Added the function
	"get_last_dates".

	* operation/invoices/invoice_stats.php,
	  operation/invoices/invoice_detail.php,
	  operation/incidents/incident_search.php,
	  operation/leads/lead_pipeline.php,
	  operation/leads/lead_statistics.php,
	  operation/leads/lead_export.php,
	  operation/leads/lead_detail.php: Added the new date
	  control and filters and fixed some errors.

2014-02-04  Dario Rodriguez <dario@artica.es>

	* include/functions_api.php: Improved invoice id 
	api function to get last id by date and by bill id.

2014-02-03  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* integria_demo.sql: Updated some insertions to adapt it
	to the actual schema.

2014-02-03  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_workunits.php
	  include/ajax/header.php
	  include/js/integria_header.js
	  include/styles/integria.css
	  operation/users/user_spare_workunit.php: Fixed bug
	in multiple workunits and changed format of alerts window.

2014-01-31  Vanessa Gil <vanessa.gil@artica.es>

	* include/styles/integria.css
	  operation/main_menu.php: Fixed bugs.

2014-01-31  Vanessa Gil <vanessa.gil@artica.es>

	* index.php
	  general/header.php
	  include/functions.php
	  include/functions_crm.php
	  include/ajax/header.php